<resources>
    <string name="app_name">Farm Auction Management</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Names</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Already have an Account? Login here.</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="contact_sec">Contact Details</string>
    <string name="address_sec">Address Details</string>
    <string name="street_details">Stand No and Street Name</string>
    <string name="surburb">Surburb</string>
    <string name="city">city</string>
    <string name="postal_code">Postal Code</string>
    <string name="login_sec">Login Details</string>
    <string name="title_activity_auction">AuctionActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="auction">Auction</string>
</resources>
